--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,12 @@
 + 1. Размер окна приложения должен быть ограничен снизу 640×480.
-- 2. Все функции кнопок, представленные на панели инструментов, должны быть
++ 2. Все функции кнопок, представленные на панели инструментов, должны быть
 продублированы элементами меню.
-- 3. Все кнопки на панели инструментов должны иметь всплывающие подсказки.
++ 3. Все кнопки на панели инструментов должны иметь всплывающие подсказки.
 + 4. Изменение параметров происходит в модальных диалоговых окнах. Должна
 присутствовать возможность отмены. Обязательно должна проверяться корректность
 введенных параметров. В случае ввода некорректных значений, приложение должно
 уведомить об этом пользователя и указать диапазон допустимых значений.
-- 5. Должна присутствовать кнопка «О программе», показывающая диалоговое окно с
++ 5. Должна присутствовать кнопка «О программе», показывающая диалоговое окно с
 информацией об авторе и программе.
 ? 6. Отсутствие необработанных исключений / падений приложения при работе.
 
@@ -43,22 +43,7 @@
 редактор не закрывается, но сцена в основном окне приложения обновляется. Желательно
 сделать динамическое обновление, то есть при изменении опорных точек в редакторе,
 сразу же меняется и фигура вращения.
-- 11. Должна быть возможность сохранения и открытия текущей фигуры и параметров
-(включая параметры отображения: поворот и зум) в файл. Формат файла сцены задаете
-самостоятельно. Программа должна корректно обрабатывать файлы, если файл не
-соответствует заданному формату или содержит некорректные данные, то не должно
-возникать ошибок, а должно появляться сообщение о некорректности выбранного файла
-
-
-=========
-
-- 2. Все функции кнопок, представленные на панели инструментов, должны быть
-продублированы элементами меню.
-- 3. Все кнопки на панели инструментов должны иметь всплывающие подсказки.
-- 5. Должна присутствовать кнопка «О программе», показывающая диалоговое окно с
-информацией об авторе и программе.
-
-- 11. Должна быть возможность сохранения и открытия текущей фигуры и параметров
++ 11. Должна быть возможность сохранения и открытия текущей фигуры и параметров
 (включая параметры отображения: поворот и зум) в файл. Формат файла сцены задаете
 самостоятельно. Программа должна корректно обрабатывать файлы, если файл не
 соответствует заданному формату или содержит некорректные данные, то не должно
